--- a/css/creative.css
+++ b/css/creative.css
@@ -64,7 +64,8 @@ aside {
 }
 .navbar-default {
   background-color: white;
-  border-color: rgba(17, 17, 17, 0.05);
+  border: 0px;
+  background-image: url("/img/header.jpg");
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -85,7 +86,7 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #111111;
+  color: white;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
@@ -100,46 +101,43 @@ aside {
 .navbar-default .nav > li.active > a:focus:hover {
   background-color: transparent;
 }
-@media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.3);
-  }
-  .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  .navbar-default .navbar-header .navbar-brand:hover,
-  .navbar-default .navbar-header .navbar-brand:focus {
-    color: white;
-  }
-  .navbar-default .nav > li > a,
-  .navbar-default .nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  .navbar-default .nav > li > a:hover,
-  .navbar-default .nav > li > a:focus:hover {
-    color: white;
-  }
-  .navbar-default.affix {
-    background-color: white;
-    border-color: rgba(17, 17, 17, 0.05);
-  }
-  .navbar-default.affix .navbar-header .navbar-brand {
-    color: #73cc81;
-    font-size: 14px;
-  }
-  .navbar-default.affix .navbar-header .navbar-brand:hover,
-  .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #4ebe5f;
-  }
-  .navbar-default.affix .nav > li > a,
-  .navbar-default.affix .nav > li > a:focus {
-    color: #111111;
-  }
-  .navbar-default.affix .nav > li > a:hover,
-  .navbar-default.affix .nav > li > a:focus:hover {
-    color: #73cc81;
-  }
+.navbar-main {
+  background-color: white;
+  border-color: rgba(17, 17, 17, 0.05);
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
+}
+.navbar-main .navbar-header .navbar-brand {
+  color: #73cc81;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.navbar-main .navbar-header .navbar-brand:hover,
+.navbar-main .navbar-header .navbar-brand:focus {
+  color: #4ebe5f;
+}
+.navbar-main .nav > li > a,
+.navbar-main .nav > li > a:focus {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 13px;
+  color: #111111;
+}
+.navbar-main .nav > li > a:hover,
+.navbar-main .nav > li > a:focus:hover {
+  color: #73cc81;
+}
+.navbar-main .nav > li.active > a,
+.navbar-main .nav > li.active > a:focus {
+  color: #73cc81 !important;
+  background-color: transparent;
+}
+.navbar-main .nav > li.active > a:hover,
+.navbar-main .nav > li.active > a:focus:hover {
+  background-color: transparent;
 }
 header {
   position: relative;
@@ -150,7 +148,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('/img/header.jpg');
   text-align: center;
   color: white;
 }
@@ -390,6 +388,9 @@ fieldset[disabled] .btn-primary.active {
   color: white;
   text-shadow: none;
   background: #111111;
+}
+img.thumb {
+  margin-left: 10px;
 }
 img::selection {
   color: white;
