--- a/less/creative.less
+++ b/less/creative.less
@@ -71,7 +71,7 @@ aside {
     padding: 0;
 }
 
-// Navigation
+// *igation
 
 .navbar-default {
     background-color: white;
@@ -154,6 +154,10 @@ aside {
             }
         }
     }
+}
+
+button.navbar-toggle {
+  background-color: #dddddd;
 }
 
 // Homepage Header
@@ -340,6 +344,7 @@ header {
 
 img.thumb {
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 img::selection {
