--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -37,9 +37,9 @@ navstyle: default
 
 </head>
 
-<body id="page-top">
+<body id="page-top" class="{{layout.navstyle}}">
   
-  <nav id="mainNav" class="navbar navbar-{{layout.navstyle}} navbar-fixed-top">
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
