--- a/less/creative.less
+++ b/less/creative.less
@@ -123,6 +123,9 @@ body.main .navbar-default {
       > a,
       > a:focus {
           color: @theme-dark;
+          &:hover {
+              color: @theme-primary;
+          }
       }
     }
   }
