added frontpage beta program info+application form

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -63,6 +63,9 @@ navstyle: default
             <a href="/news">News</a>
           </li>
           <li>
+            <a class="page-scroll" href="/#beta">Beta</a>
+          </li>
+          <li>
             <a class="page-scroll" href="#about">About</a>
           </li>
           <li>
@@ -80,7 +83,7 @@ navstyle: default
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">Coming Soon!</h2>
+          <h2 class="section-heading">More Coming Soon!</h2>
           <hr class="light">
           <p class="text-faded">
 
