--- a/css/creative.css
+++ b/css/creative.css
@@ -381,3 +381,55 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #111111;
 }
+#badge-carousel-form {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  /* Medium devices (desktops, 992px and up) */
+  /* Medium devices (desktops, 992px and up) */
+  /* Large devices (large desktops, 1200px and up) */
+}
+@media (min-width: 750px) {
+  #badge-carousel-form {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  #badge-carousel-form {
+    width: 900px;
+  }
+}
+@media (min-width: 1200px) {
+  #badge-carousel-form {
+    width: 1150px;
+  }
+}
+div#myCarousel.carousel.slide,
+div#beta-program-form-container {
+  width: 100%;
+  height: 281px;
+  /* Medium devices (desktops, 992px and up) */
+  /* Medium devices (desktops, 992px and up) */
+  /* Large devices (large desktops, 1200px and up) */
+}
+@media (min-width: 750px) {
+  div#myCarousel.carousel.slide,
+  div#beta-program-form-container {
+    width: 375px;
+    height: 281px;
+  }
+}
+@media (min-width: 992px) {
+  div#myCarousel.carousel.slide,
+  div#beta-program-form-container {
+    width: 450px;
+    height: 360px;
+  }
+}
+@media (min-width: 1200px) {
+  div#myCarousel.carousel.slide,
+  div#beta-program-form-container {
+    width: 575px;
+    height: 432px;
+  }
+}
