--- a/less/creative.less
+++ b/less/creative.less
@@ -335,3 +335,48 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @theme-dark;
 }
+
+#badge-carousel-form {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 750px) {
+    width:  750px;
+  }
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    width:  900px;
+  }
+
+  /* Large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+    width:  1150px;
+  }
+}
+
+div#myCarousel.carousel.slide,
+div#beta-program-form-container {
+  width: 100%;
+  height: 281px;
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 750px) {
+    width: 375px;
+    height: 281px;
+  }
+  
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    width:  450px;
+    height: 360px;
+  }
+
+  /* Large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+    width:  575px;
+    height: 432px;
+  }
+}
