--- a/css/creative.css
+++ b/css/creative.css
@@ -385,51 +385,18 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  /* Medium devices (desktops, 992px and up) */
-  /* Medium devices (desktops, 992px and up) */
-  /* Large devices (large desktops, 1200px and up) */
+  border: 1px solid red;
 }
-@media (min-width: 750px) {
+@media (min-width: 600px) {
   #badge-carousel-form {
-    width: 750px;
-  }
-}
-@media (min-width: 992px) {
-  #badge-carousel-form {
-    width: 900px;
-  }
-}
-@media (min-width: 1200px) {
-  #badge-carousel-form {
-    width: 1150px;
-  }
-}
-div#myCarousel.carousel.slide,
-div#beta-program-form-container {
-  width: 100%;
-  height: 281px;
-  /* Medium devices (desktops, 992px and up) */
-  /* Medium devices (desktops, 992px and up) */
-  /* Large devices (large desktops, 1200px and up) */
-}
-@media (min-width: 750px) {
-  div#myCarousel.carousel.slide,
-  div#beta-program-form-container {
-    width: 375px;
-    height: 281px;
-  }
-}
-@media (min-width: 992px) {
-  div#myCarousel.carousel.slide,
-  div#beta-program-form-container {
-    width: 450px;
-    height: 360px;
-  }
-}
-@media (min-width: 1200px) {
-  div#myCarousel.carousel.slide,
-  div#beta-program-form-container {
     width: 575px;
-    height: 432px;
+  }
+}
+div#myCarousel.carousel.slide {
+  width: 100%;
+}
+@media (min-width: 600px) {
+  div#myCarousel.carousel.slide {
+    width: 575px;
   }
 }
