--- a/less/creative.less
+++ b/less/creative.less
@@ -340,43 +340,17 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  border: 1px solid red;
 
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 750px) {
-    width:  750px;
-  }
-
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    width:  900px;
-  }
-
-  /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    width:  1150px;
+  @media (min-width: 600px) {
+    width:  575px;
   }
 }
 
-div#myCarousel.carousel.slide,
-div#beta-program-form-container {
+div#myCarousel.carousel.slide {
   width: 100%;
-  height: 281px;
 
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 750px) {
-    width: 375px;
-    height: 281px;
-  }
-  
-  /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    width:  450px;
-    height: 360px;
-  }
-
-  /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    width:  575px;
-    height: 432px;
+  @media (min-width: 600px) {
+    width: 575px;
   }
 }
